--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blue;
-    color: white;
+    background-color: gray;
+    color:black;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
